--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node -r esm server.js",
+    "dev": "nodemon -r esm server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "esm": "^3.2.25",
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "dotenv": "^11.0.0"
   }
 }
